@@ -47,6 +47,10 @@ ifeq ($(CONFIG_NSH_BUILTIN_APPS),y)
 CSRCS += nsh_builtin.c
 endif
 
+ifeq ($(CONFIG_NSH_FILE_APPS),y)
+CSRCS += nsh_fileapps.c
+endif
+
 ifeq ($(CONFIG_NSH_ROMFSETC),y)
 CSRCS += nsh_romfsetc.c
 endif
